kubernetes/pi/apps/network/misc-ingress/app/portainer-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
spec:
  ingressClassName: internal
  rules:
    - host: &host portainer.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: portainer
                port:
                  number: 9090
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: portainer
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 9090
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
spec:
  ports:
    - name: http
      port: 9090
  type: ClusterIP
